Criando as funções de gerenciaar usuarios
