# backend/server.js
@@ -11,6 +11,7 @@ import ImplementoRoute from './routes/implementoRoute.js';
 import LocacaoRoute from './routes/locacaoRouter.js';
 import ClienteRoute from './routes/clienteRoute.js';
 import ManuetencaoRoute from './routes/manutencaoRoute.js';
+import UsuarioRoute from './routes/usuarioRoute.js';
 
 const app = express();
 app.listen(5000);
@@ -48,4 +49,9 @@ app.use('/cliente',
 app.use('/manutencao', 
     // #swagger.tags = ['Manutenção']
     ManuetencaoRoute
+);
+
+app.use('/usuario', 
+    // #swagger.tags = ['Usuários']
+    UsuarioRoute
 );
